--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -18,63 +18,59 @@
         <div class="flex-container">
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
             <div class="display-item">
                 <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
-            </div>
-            <div class="display-item">
-                <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
-            </div>
-            <div class="display-item">
-                <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
-            </div>
-            <div class="display-item">
-                <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
-            </div>
-            <div class="display-item">
-                <img src="#" alt="Image">
-                <h3>Title</h3>
-                <p>Description</p>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
             </div>
         </div>
         <footer>
