--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -17,56 +17,56 @@
         </header>
         <div class="flex-container">
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
                 </div>
             </div>
             <div class="display-item">
-                <img src="#" alt="Image">
+                <img src="https://imgs.search.brave.com/muGneTUNuFHdN8m6nvgTEdnD0geVMEu_VrxTdvEjtXI/rs:fit:300:300:1/g:ce/aHR0cHM6Ly9vcGVu/Y2xpcGFydC5vcmcv/aW1hZ2UvMzAwcHgv/c3ZnX3RvX3BuZy8x/OTQwNzcvUGxhY2Vo/b2xkZXIucG5n" alt="Image">
                 <div class="description">
                     <h3>Title</h3>
                     <p>Description</p>
