--- a/destinations.html
+++ b/destinations.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./styles/destinations.css">
     </head>
     <body>
+    <div class="content">
         <header>
             <nav>
                 <ul>
@@ -18,7 +19,7 @@
             </nav>
         </header>
     <section>
-        <div id="greeting">
+        <div class="greeting">
             <h1>Don't know what to do on a Saturday?</h1>
             <p>There's plenty of places for activities and food.</p>
         </div>
@@ -26,15 +27,19 @@
         <div class="categories">
             <div class="food">
                 <img src="./images/dst_imgs/1932466.png" alt="Food">
+            </div>
+            <div class="food text">
                 <h2>Food</h2>
                 <p>Hungry? There's a wide variety of resturants to visit!</p>
-                <button>Feed Me!</button>
+                <a class="button" href="./food.html">Feed Me!</a>
             </div>
             <div class="places">
                 <img src="./images/dst_imgs/1492099.png" alt="Places">
+            </div>
+            <div class="places text">
                 <h2>Places</h2>
                 <p>Bored? There's so much to do, if you know where to look!</p>
-                <button>Excelcior!</button>
+                <a class="button" href="./activities.html">Excelcior!</a>
             </div>
         </div>
     </section>
