--- a/wdd130/wwr/rivers2.html
+++ b/wdd130/wwr/rivers2.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rivers</title>
-        <link rel="stylesheet" href="styles/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rivers</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="./images/logo.png" alt="Dry Oar Logo">
+            <a id="logo_link" href="index.html" >
+                <img class="logo" src="images/roundlogo.png" alt="Dry Oar Logo">
             </a>
             <nav>
-                    <a href="index.html">Home</a>
-                    <a href="rivers.html">Rivers</a>
-                    <a href="site-plan-rafting.html">Site Plan</a>
-                    <a href="contactus.html">Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="rivers.html">Rivers</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <div id="river"></div>
+        <div id="river">
+            <img id="river-img" src="images/river-wide2.jpg" alt="People enjoying rafting">
+        </div>
         <main class="rivers-grid">
-            <section class="rivers-grid">
+            <section class="river-msg">
                 <h1 class="river-title">Rivers</h1>
-    
-            <section class="salmon">
-                <h2 class="idaho">Main Fork of the Salmon River, Idaho</h2>
+                <p>Below are some rivers that our company runs.</p>
+            </section>
+            <img id="salmon-img" src="images/salmon_river.jpg" alt="People rafting on the river">
+            <section class="salmon-river">
+                <h3 class="idaho">Main Fork of the Salmon River, Idaho</h3>
                 <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.</p>
                 <p>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.</p>
                 <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
             </section>
+                <img id="desolation-img" src="images/littlecolorado.jpg" alt="People walking near river">
             <section class="desolation">
-                <h2 class="utah">Desolation and Gray Canyon, Utah</h2>
+                <h3 class="utah">Desolation and Gray Canyon, Utah</h3>
                 <p>Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.</p>
                 <p>Desolation is rated a Class II/III and is usually done in 6 days.</p>
                 <p>Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.</p>
             </section>
-            <section class="grand">
-                <h2 class="arizona">Grand Canyon, Arizona</h2>
+            
+            <img id="canyon-img" src="images/rafting_ban.jpg" alt="People rafting on river">
+            <section class="canyon"> 
+                <h3 class="arizona">Grand Canyon, Arizona</h3>               
                 <p>This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.</p>
                 <p>Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.</p>
                 <p>CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.</p>
@@ -48,18 +55,18 @@
             </div>
         </main>
         <footer>
-            <p>Dry Oar &copy; 2023 - Daniel Checketts</p>
-            <p><a href="./site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="./contactus.html">Contact Us</a></p>
+            <p>Dry Oar &copy; 2023 - Audrey Checketts</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="./images/social/facebook.png" alt="fb icon">
+                    <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="./images/social/twitter.png" alt="twitter icon">
+                    <img src="images/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="./images/social/instagram.png" alt="instagram icon">
+                    <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
