--- a/wdd130/wwr/rivers2.html
+++ b/wdd130/wwr/rivers2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rivers</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/styles2.css">
 </head>
 <body>
     <div id="content">
